--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.FlowrSpot"
+        android:theme="@style/FlowerAppTheme"
         tools:targetApi="31">
         <activity
             android:name=".ui.MainActivity"
