--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,5 +78,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
 
+    // MockWebServer
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
+
 
 }
